--- a/login form.html
+++ b/login form.html
@@ -40,8 +40,8 @@
 			.header{
 				text-align: center;
 				padding: 20px; 
-				background-color: #c7bfbf;
-				background-color: #ff1b1b;*/
+				/*background-color: #c7bfbf;*/
+				background-color: #ff1b1b;
 			
                 color: black;
 
